INTYG-3577: Fix så att Cookiebanner syns även i utkastvy (döljdes av utkast-header pga just den hade högre z-index..)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -903,7 +903,7 @@ wc cookie banner css.
   right: 0;
   left: 0;
   border: none;
-  z-index: 1010;
+  z-index: 1020;
 
   .alert {
     max-width: inherit;
